# video-loop

./: .gitignore  .mcp.json  Makefile  PLAN.json  opencode-sessions.json  pi-session-2026-07-09T07-38-28-399Z_019f45d0-52af-7c5b-acd6-804f51e02259.html  pyproject.toml  scenes.json  screenlog.0  test.mp4.report.json  vfx-cli  vfx-tui
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-10T09-23-45-256Z.yml  page-2026-07-10T09-58-00-699Z.yml
.repowise/: .update.pending  centrality_cache.pkl  config.yaml  duplication_cache.pkl  duplication_pairs.pkl  knowledge-graph.json  mcp.json  parse_cache.pkl  state.json  wiki.db
.repowise/jobs/: 61f5d8ee-2ac2-4af6-bdcc-8065fccc669e.json
config/: design-tokens.json  engine_routing.yaml  recipe_registry.json  settings.json
docs/: GOALS.md  LESSONS.md  PRD.md  RESEARCH-v1.0.0.md  REVIEW-v2.md  SPEC.md  STUDY-ui-showcase-next.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
remotion-project/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
remotion-project/__tests__/: Root.test.tsx  designTokens.test.ts  inputProps.test.ts  remotion-mock.tsx  sceneTokenAdoption.test.tsx
remotion-project/src/: Root.tsx  design-tokens.ts  transitions.ts  types.ts
scripts/: generate_video.py  orchestrator.py  run_manim_mcp_server.py  run_tts_server.py
skills/: video-grill-me.skill.md  video-manim.skill.md
src/videoforge/: app.py  config.py  design_tokens.py  exceptions.py  paths.py  server.py
tests/: conftest.py  test_animotion_renderer.py  test_assembler_ir.py  test_design_tokens.py  test_determinism.py  test_director.py  test_imports.py  test_ir.py  test_manim_generators.py  test_map_geo.py  test_markers.py  test_mixed_engine.py  test_mixed_engine_golden.py  test_paths.py  test_recipe_orchestration.py  test_recipe_payload.py  test_recipe_scene_plan.py  test_recipes.py  test_scaffold.py  test_scene_planner_showcase.py  test_scene_planner_templates.py  test_script_writer_showcase.py  test_showcase_golden.py  test_template_registry.py  test_templates.py
tests/api/: test_actions.py  test_artifacts.py  test_director_preview.py  test_jobs.py  test_recipes_api.py  test_reports.py  test_settings.py  test_sse.py
tests/artifacts/: test_generator.py
tests/audio/: test_chunker.py  test_forced_align.py  test_tts_adapter.py
tests/e2e/: test_e2e_full_flow.py  (+1 more)
videoforge/: app.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
(+321 files in other folders)
