[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "videoforge"
version = "0.1.0"
description = "MCP-native automated video generation pipeline"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: integration tests exceeding 5s; excluded via -m 'not slow'",
    "render_smoke: render pipeline tests; candidates for optional heavy smoke suite",
    "structural: fast structural/logic unit tests (default suite)",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
